# usb-isoupdater

./: .gitignore  README.md  config.py  distros.py  distrowatch_distros.py  hello.py  links.py  linuxlookup.html  main.py  pyproject.toml
docs/: index.md  modules.md
tests/: test_foo.py
usb_isoupdater/: config.py  example_udev.rules  main.py  progressbar.py
usb_isoupdater/distro_sources/: distro_base.py  http_distros.py  torrent_distros.py
