[project]
name = "iso-usbupdater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "defusedxml>=0.7.1",
    "feedparser>=6.0.11",
    "inquirerpy>=0.3.4",
    "prodict>=0.8.20",
    "progressbar>=2.5",
    "requests>=2.32.3",
    "rss-parser>=2.1.0",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.1",
]
